add lost message+condition, add max moves

--- a/src/app/components/game-over/game-over.component.html
+++ b/src/app/components/game-over/game-over.component.html
@@ -1,7 +1,13 @@
 
-@if (isGameOver) {
+@if (isGameOver && !isGameLost) {
     <p> You won in {{ moves }} moves!</p>
     <p>Want to try again?</p>
     <button (click)="tryAgain()">Try again</button>
 } 
+
+@if(isGameLost) {
+    <p> You lost! You have to match all cards {{MAX_MOVES}} moves.</p>
+    <p>Want to try again?</p>
+    <button (click)="tryAgain()">Try again</button>
+}
 
