add subject, refactoring

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,6 @@
 
     <p>Select the number of pairs:</p>
-    <button (click)="startGame(4)">4 Pairs</button>
-    <button (click)="startGame(6)">6 Pairs</button>
-    <button (click)="startGame(8)">8 Pairs</button>
-    <button (click)="startGame(10)">10 Pairs</button>
-    <button (click)="startGame(12)">12 Pairs</button>
+
+    @for (pairs of selectPairs; track $index) {
+        <button (click)="startGame(pairs)">{{pairs}} Pairs</button>
+    }
