--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -13,30 +13,39 @@
     <div class="game-section">
 
         <div class="card-section">
-            <div class="pairs" *ngIf="!gameStarted">
-                <app-header (gameStart)="onGameStart($event)"></app-header>
-            </div>
-
-            <div class="cards" *ngIf="gameStarted && !isGameOver">
-                <div class="grid" [attr.data-pairs]="cards.length / 2">
-                    <div *ngFor="let card of cards" class="card" (click)="flipCard(card)">
-                        <img *ngIf="card.isFlipped || card.isMatched" [src]="card.image" alt="card front">
-                        <img *ngIf="!card.isFlipped && !card.isMatched" src="/assets/card-back.jpg" alt="card back">
-                    </div>
+            @if (!gameStarted) {
+                <div class="pairs">
+                    <app-header 
+                    (gameStart)="onGameStart($event)"
+                    [selectPairs]="selectPairs"></app-header>
                 </div>
-                <button (click)="restartGame()">Retry</button>
-            </div>
+            }
 
-            <div class="game-over-section" *ngIf="isGameOver">
-                <app-game-over
-                    [isGameOver]="isGameOver"
-                    [isGameLost]="isGameLost"
-                    [MAX_MOVES]="MAX_MOVES"
-                    [moves]="moves"
-                    (restartGame)="restartGame()"
-                    >
-                </app-game-over>
-            </div>
+            @if (gameStarted && !isGameOver) {
+                <div class="cards">
+                    <div class="grid" [attr.data-pairs]="cards.length / 2">
+                        <div *ngFor="let card of cards" class="card" (click)="flipCard(card)">
+                            <img *ngIf="card.isFlipped || card.isMatched" [src]="card.image" alt="card front">
+                            <img *ngIf="!card.isFlipped && !card.isMatched" src="/assets/card-back.jpg" alt="card back">
+                        </div>
+                    </div>
+                    <button (click)="restartGame()">Retry</button>
+                </div>
+            }
+            
+            @if (isGameOver) {
+                <div class="game-over-section">
+                    <app-game-over
+                        [isGameOver]="isGameOver"
+                        [isGameLost]="isGameLost"
+                        [MAX_MOVES]="MAX_MOVES"
+                        [moves]="moves"
+                        (restartGame)="restartGame()"
+                        >
+                    </app-game-over>
+                </div>
+            }
+            
         </div>
 
     </div>
